# tokens-hackathon

./: CLAUDE.md
tokens-be/: .env.example  main.py  pyproject.toml
tokens-be/app/: config.py  main.py  models.py  pipeline.py  state.py
tokens-be/app/agents/: analyst.py  brief.py  discovery.py  icp.py  researcher.py
tokens-be/app/clients/: nimble_client.py  senso_client.py
tokens-be/app/tools/: nimble.py  senso.py
tokens-be/scripts/: smoke_agents.py  smoke_nimble.py  smoke_senso.py
tokens-fe/: package-lock.json  package.json
tokens-fe/app/: layout.tsx  page.tsx
tokens-fe/app/lib/: api.ts
tokens-fe/app/runs/[id]/: RunView.tsx  page.tsx
