[project]
name = "tokens-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "openai-agents>=0.17.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.47.0",
]
